--- a/app/home/views/home.html
+++ b/app/home/views/home.html
@@ -1,12 +1,8 @@
-<div class="container-fluid">
+<div class="container-fluid paddinig-0">
     <div class="row">
         <div class="col-xs-12 padding-0">
             <img class="width-100p height-100vh position-fixed" ng-src="./styles/img/home-bg.jpg">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12 padding-0">
-            
+            <div data-smart-include="app/layout/partials/header.tpl.html" class="placeholder-header"></div>
         </div>
     </div>
 </div>
