--- a/app/layout/partials/header.tpl.html
+++ b/app/layout/partials/header.tpl.html
@@ -15,7 +15,7 @@
     </div>
 
 
-    <!--<recent-projects></recent-projects>-->
+    <recent-projects></recent-projects>
 
 
     <!-- pulled right: nav area -->
@@ -80,29 +80,7 @@
 
         <!-- input: search field -->
         <form action="#/search" class="header-search pull-right">
-            <input id="search-fld" type="text" name="param" placeholder="Find reports and more" data-autocomplete='[
-					"ActionScript",
-					"AppleScript",
-					"Asp",
-					"BASIC",
-					"C",
-					"C++",
-					"Clojure",
-					"COBOL",
-					"ColdFusion",
-					"Erlang",
-					"Fortran",
-					"Groovy",
-					"Haskell",
-					"Java",
-					"JavaScript",
-					"Lisp",
-					"Perl",
-					"PHP",
-					"Python",
-					"Ruby",
-					"Scala",
-					"Scheme"]'>
+            <input id="search-fld" type="text" name="param" placeholder="{{getWord('Find reports and more')}}">
             <button type="submit">
                 <i class="fa fa-search"></i>
             </button>
