--- a/app/home/views/home.html
+++ b/app/home/views/home.html
@@ -1,4 +1,4 @@
-<div class="container-fluid paddinig-0">
+<div class="container-fluid paddinig-0" ng-click="go('categories')">
     <div class="row">
         <div class="col-xs-12 padding-0">
             <img class="width-100p height-100vh position-fixed" ng-src="./styles/img/home-bg.jpg">
