--- a/app/home/views/categories.html
+++ b/app/home/views/categories.html
@@ -9,7 +9,7 @@
             <section widget-grid id="widget-grid-categories">
                 <div class="row">
                     <article class="col-sm-6" ng-repeat="category in categories">
-                        <div jarvis-widget class="jarviswidget jarviswidget-color-orangeDark jarviswidget-sortable margin-bottom-10" data-widget-colorbutton="false" data-widget-editbutton="false" data-widget-togglebutton="false" data-widget-deletebutton="false" role="widget" style="">
+                        <div jarvis-widget class="jarviswidget jarviswidget-color-orangeDark jarviswidget-sortable margin-bottom-10" data-widget-editbutton="true"  data-widget-deletebutton="false">
                             <header>
                                 <span class="widget-icon"> <i class="fa fa-table"></i> </span>
                                 <h2>{{category.category_name}}</h2>
@@ -28,7 +28,7 @@
             <section widget-grid id="widget-grid-ads">
                 <div class="row">
                     <article class="col-sm-6">
-                        <div jarvis-widget class="jarviswidget jarviswidget-color-greenDark jarviswidget-sortable" data-widget-colorbutton="false" data-widget-editbutton="false" data-widget-togglebutton="false" data-widget-deletebutton="false" role="widget" style="">
+                        <div jarvis-widget class="jarviswidget jarviswidget-color-greenDark jarviswidget-sortable margin-bottom-10" data-widget-editbutton="true"  data-widget-deletebutton="false">
                             <header>
                                 <span class="widget-icon"> <i class="fa fa-table"></i> </span>
                                 <h2>Ads1</h2>
@@ -41,7 +41,7 @@
                         </div>
                     </article>
                     <article class="col-sm-6">
-                        <div jarvis-widget class="jarviswidget jarviswidget-color-greenDark jarviswidget-sortable" data-widget-colorbutton="false" data-widget-editbutton="false" data-widget-togglebutton="false" data-widget-deletebutton="false" role="widget" style="">
+                        <div jarvis-widget class="jarviswidget jarviswidget-color-greenDark jarviswidget-sortable margin-bottom-10" data-widget-editbutton="true"  data-widget-deletebutton="false">
                             <header>
                                 <span class="widget-icon"> <i class="fa fa-table"></i> </span>
                                 <h2>Ads2</h2>
@@ -54,7 +54,7 @@
                         </div>
                     </article>
                     <article class="col-sm-12">
-                        <div jarvis-widget class="jarviswidget jarviswidget-color-greenDark jarviswidget-sortable" data-widget-colorbutton="false" data-widget-editbutton="false" data-widget-togglebutton="false" data-widget-deletebutton="false" role="widget" style="">
+                        <div jarvis-widget class="jarviswidget jarviswidget-color-greenDark jarviswidget-sortable margin-bottom-10" data-widget-editbutton="true"  data-widget-deletebutton="false">
                             <header>
                                 <span class="widget-icon"> <i class="fa fa-table"></i> </span>
                                 <h2>Ads2</h2>
