--- a/app/home/views/categories.html
+++ b/app/home/views/categories.html
@@ -29,10 +29,6 @@
                 <div class="row">
                     <article class="col-sm-6">
                         <div jarvis-widget class="jarviswidget jarviswidget-color-greenDark jarviswidget-sortable margin-bottom-10" data-widget-editbutton="true"  data-widget-deletebutton="false">
-                            <header>
-                                <span class="widget-icon"> <i class="fa fa-table"></i> </span>
-                                <h2>Ads1</h2>
-                            </header>
                             <div>
                                 <div class="widget-body">
                                     <img class="img-responsive width-100p" ng-src="./styles/img/temp/ads/1.jpg">
@@ -42,10 +38,6 @@
                     </article>
                     <article class="col-sm-6">
                         <div jarvis-widget class="jarviswidget jarviswidget-color-greenDark jarviswidget-sortable margin-bottom-10" data-widget-editbutton="true"  data-widget-deletebutton="false">
-                            <header>
-                                <span class="widget-icon"> <i class="fa fa-table"></i> </span>
-                                <h2>Ads2</h2>
-                            </header>
                             <div>
                                 <div class="widget-body">
                                     <img class="img-responsive width-100p" ng-src="./styles/img/temp/ads/2.jpg">
@@ -55,10 +47,6 @@
                     </article>
                     <article class="col-sm-12">
                         <div jarvis-widget class="jarviswidget jarviswidget-color-greenDark jarviswidget-sortable margin-bottom-10" data-widget-editbutton="true"  data-widget-deletebutton="false">
-                            <header>
-                                <span class="widget-icon"> <i class="fa fa-table"></i> </span>
-                                <h2>Ads2</h2>
-                            </header>
                             <div>
                                 <div class="widget-body">
                                     <img class="img-responsive width-100p" ng-src="./styles/img/temp/ads/4.jpg">
@@ -68,6 +56,11 @@
                     </article>
                 </div>
             </section>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 padding-0">
+            <div data-smart-include="app/layout/partials/footer.tpl.html" class="placeholder-footer"></div>
         </div>
     </div>
 </div>
