--- a/app/home/views/categories.html
+++ b/app/home/views/categories.html
@@ -12,7 +12,7 @@
                         <div jarvis-widget class="jarviswidget jarviswidget-color-orangeDark jarviswidget-sortable margin-bottom-10" data-widget-editbutton="true"  data-widget-deletebutton="false">
                             <header>
                                 <span class="widget-icon"> <i class="fa fa-table"></i> </span>
-                                <h2>{{category.category_name}}</h2>
+                                <h2>{{getWord(category.category_name)}}</h2>
                             </header>
                             <div class="padding-5">
                                 <div class="widget-body padding-bottom-0">
