--- a/app/auth/views/forgot-password.html
+++ b/app/auth/views/forgot-password.html
@@ -1,4 +1,4 @@
-<header id="header"  class="animated fadeInDown" >
+<header id="header" class="animated fadeInDown">
 
     <div id="logo-group">
         <span id="logo"> <img src="styles/img/logo.png" alt="SmartAdmin"> </span>
@@ -8,44 +8,11 @@
             ui-sref="register" class="btn btn-danger">Create account</a> </span>
 
 </header>
-<div id="main" role="main"  class="animated fadeInDown" >
-
+<div id="main" role="main" class="animated fadeInDown">
+    <img class="width-100p height-100vh position-fixed" ng-src="./styles/img/home-bg.jpg">
     <div id="content" class="container">
-
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-7 col-lg-8 hidden-xs hidden-sm">
-                <h1 class="txt-color-red login-header-big">SmartAdmin</h1>
-                <div class="hero">
-
-                    <div class="pull-left login-desc-box-l">
-                        <h4 class="paragraph-header">It's Okay to be Smart. Experience the simplicity of SmartAdmin, everywhere you go!</h4>
-                        <div class="login-app-icons">
-                            <a href-void class="btn btn-danger btn-sm">Frontend Template</a>
-                            <a href-void class="btn btn-danger btn-sm">Find out more</a>
-                        </div>
-                    </div>
-
-                    <img src="styles/img/demo/iphoneview.png" class="pull-right display-image" alt="" style="width:210px">
-
-                </div>
-
-                <div class="row">
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                        <h5 class="about-heading">About SmartAdmin - Are you up to date?</h5>
-                        <p>
-                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa.
-                        </p>
-                    </div>
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                        <h5 class="about-heading">Not just your average template!</h5>
-                        <p>
-                            Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi voluptatem accusantium!
-                        </p>
-                    </div>
-                </div>
-
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-4">
+            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-4 padding-top-40">
                 <div class="well no-padding">
                     <form action="#/login" id="login-form" class="smart-form client-form">
                         <header>
@@ -98,8 +65,39 @@
                 </ul>
 
             </div>
+            <div class="col-xs-12 col-sm-12 col-md-7 col-lg-8">
+                <section widget-grid id="widget-grid-ads">
+                    <div class="row">
+                        <article class="col-xs-6">
+                            <div jarvis-widget class="jarviswidget jarviswidget-color-greenDark jarviswidget-sortable margin-bottom-10" data-widget-editbutton="true" data-widget-deletebutton="false">
+                                <div>
+                                    <div class="widget-body">
+                                        <img class="img-responsive width-100p" ng-src="./styles/img/temp/ads/1.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="col-xs-6">
+                            <div jarvis-widget class="jarviswidget jarviswidget-color-greenDark jarviswidget-sortable margin-bottom-10" data-widget-editbutton="true" data-widget-deletebutton="false">
+                                <div>
+                                    <div class="widget-body">
+                                        <img class="img-responsive width-100p" ng-src="./styles/img/temp/ads/2.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="col-xs-12">
+                            <div jarvis-widget class="jarviswidget jarviswidget-color-greenDark jarviswidget-sortable margin-bottom-10" data-widget-editbutton="true" data-widget-deletebutton="false">
+                                <div>
+                                    <div class="widget-body">
+                                        <img class="img-responsive width-100p" ng-src="./styles/img/temp/ads/4.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </section>
+            </div>
         </div>
     </div>
-
-</div>
 </div>
