done login system

--- a/app/auth/views/register.html
+++ b/app/auth/views/register.html
@@ -80,14 +80,14 @@
                                 </section>
                             </div>
 
-                            <section>
+                            <!--<section>
                                 <label class="checkbox">
                                     <input type="checkbox" name="subscription" id="subscription">
                                     <i></i>I want to receive news and special offers</label>
                                 <label class="checkbox">
                                     <input type="checkbox" name="terms" id="terms">
                                     <i></i>I agree with the <a href="#" data-toggle="modal" data-target="#myModal"> Terms and Conditions </a></label>
-                            </section>
+                            </section>-->
                         </fieldset>
                         <footer>
                             <button type="submit" class="btn btn-primary">
