--- a/app/auth/views/login.html
+++ b/app/auth/views/login.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-5 col-lg-4 padding-top-40">
                 <div class="well no-padding">
-                    <form action="#/dashboard" id="login-form" class="smart-form client-form"  data-smart-validate-form>
+                    <form action="#/home" id="login-form" class="smart-form client-form"  data-smart-validate-form>
                         <header>
                             Sign In
                         </header>
