--- a/app/layout/partials/header.tpl.html
+++ b/app/layout/partials/header.tpl.html
@@ -65,11 +65,11 @@
         </ul>
 
         <!-- logout button -->
-        <!--<div id="logout" class="btn-header transparent pull-right">
+        <div id="logout" class="btn-header transparent pull-right">
         <span> <a ui-sref="login" title="Sign Out" data-action="userLogout"
                   data-logout-msg="You can improve your security further after logging out by closing this opened browser"><i
                 class="fa fa-sign-out"></i></a> </span>
-        </div>-->
+        </div>
         <!-- end logout button -->
 
         <!-- search mobile button (this is hidden till mobile view port) -->
