--- a/app/auth/views/login.html
+++ b/app/auth/views/login.html
@@ -60,7 +60,7 @@
                         </footer>
                     </form>
                 </div>
-                <ul class="list-inline text-center">
+                <!--<ul class="list-inline text-center">
                     <li>
                         <a href-void class="btn btn-primary btn-circle"><i class="fa fa-facebook"></i></a>
                     </li>
@@ -70,7 +70,7 @@
                     <li>
                         <a href-void class="btn btn-warning btn-circle"><i class="fa fa-linkedin"></i></a>
                     </li>
-                </ul>
+                </ul>-->
             </div>
             <div class="col-xs-12 col-sm-12 col-md-7 col-lg-8">
                 <section widget-grid id="widget-grid-ads">
