--- a/app/auth/views/forgot-password.html
+++ b/app/auth/views/forgot-password.html
@@ -10,9 +10,9 @@
 </header>
 <div id="main" role="main" class="animated fadeInDown">
     <img class="width-100p height-100vh position-fixed" ng-src="./styles/img/home-bg.jpg">
-    <div id="content" class="container">
+    <div id="content" class="container-fluid">
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-4 padding-top-40">
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-md-offset-1 col-lg-offset-1 padding-top-40">
                 <div class="well no-padding">
                     <form action="#/login" id="login-form" class="smart-form client-form">
                         <header>
@@ -65,7 +65,8 @@
                                 </ul>-->
 
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-7 col-lg-8">
+            <div class="col-md-1 col-lg-1"></div>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                 <section widget-grid id="widget-grid-ads">
                     <div class="row">
                         <article class="col-xs-6">
