--- a/app/auth/views/register.html
+++ b/app/auth/views/register.html
@@ -12,10 +12,10 @@
 <div id="main" role="main"  class="animated fadeInDown" >
     <img class="width-100p height-100vh position-fixed" ng-src="./styles/img/home-bg.jpg">
     <!-- MAIN CONTENT -->
-    <div id="content" class="container">
+    <div id="content" class="container-fluid">
 
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 col-md-offset-1 col-lg-offset-1">
                 <div class="well no-padding">
 
                     <form action="#/login" id="smart-form-register" class="smart-form client-form">
@@ -116,7 +116,7 @@
                     </li>
                 </ul>-->
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                 <section widget-grid id="widget-grid-ads">
                     <div class="row">
                         <article class="col-xs-6">
