--- a/app/auth/views/register.html
+++ b/app/auth/views/register.html
@@ -15,7 +15,7 @@
     <div id="content" class="container-fluid">
 
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 col-md-offset-1 col-lg-offset-1">
+            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 col-md-offset-1 col-lg-offset-1 padding-top-40">
                 <div class="well no-padding">
 
                     <form action="#/login" id="smart-form-register" class="smart-form client-form">
