--- a/app/auth/views/register.html
+++ b/app/auth/views/register.html
@@ -74,8 +74,25 @@
                                         </select> <i></i> </label>
                                 </section>
                                 <section class="col col-6">
-                                    <label class="input"> <i class="icon-append fa fa-calendar"></i>
-                                        <input type="text" name="request" placeholder="Request activation on" class="datepicker" data-dateformat='dd/mm/yy'>
+                                    <label class="input"> <i class="icon-append fa fa-phone"></i>
+                                        <input type="text" name="phone" placeholder="Phone">
+                                    </label>
+                                </section>
+                            </div>
+
+                            <div class="row">
+                                <section class="col col-6">
+                                    <label class="select">
+                                        <select name="restaurant">
+                                            <option value="0" selected="" disabled="">Restaurants</option>
+                                            <option value="1">Togo's Sandwiches</option>
+                                            <option value="2">BOURBON STEAK</option>
+                                            <option value="3">Tuscan</option>
+                                        </select> <i></i> </label>
+                                </section>
+                                <section class="col col-6">
+                                    <label class="input"> <i class="icon-append fa fa-sitemap"></i>
+                                        <input type="text" name="zipcode" placeholder="Zipcode">
                                     </label>
                                 </section>
                             </div>
